<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.belleme</groupId>
    <artifactId>projet-ceetiz</artifactId>
    <version>1.0.0</version>

    <name>Projet Ceetiz</name>
    <description>Projet de recrutement Ceetiz par Nicolas Bellème</description>

    <properties>
        <java.version>11</java.version>

        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>


    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.3.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>projet-ceetiz</finalName>


        <plugins>
            <!-- Needed to run JUnit 5 tests with maven version < 3.6.0 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>